name:                ace
version:             0.0
synopsis:            Attempto Controlled English parser and printer
description:         Attempto Controlled English is a formally defined unambiguous language which
                     is a subset of the English language. This package provides a tokenizer,
                     parser and printer for that language. Specifically, it implements the
                     declarative mood and the interrogative mood.

                     The imperative mood is omited at this time. Interpretation rules,
                     conversion to FoL, or any further analysis is not implemented by this
                     library.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2014 Chris Done
category:            Linguistics
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   ACE, ACE.Types.Syntax, ACE.Parsers
  build-depends:     base >= 4 && <5,
                     parsec,
                     semigroups,
                     data-default
